@@ -9,10 +9,7 @@ import it.pagopa.selfcare.user_group.dao.UserGroupRepository;
 import it.pagopa.selfcare.user_group.exception.ResourceAlreadyExistsException;
 import it.pagopa.selfcare.user_group.exception.ResourceNotFoundException;
 import it.pagopa.selfcare.user_group.exception.ResourceUpdateException;
-import it.pagopa.selfcare.user_group.model.DummyGroup;
-import it.pagopa.selfcare.user_group.model.UserGroupEntity;
-import it.pagopa.selfcare.user_group.model.UserGroupFilter;
-import it.pagopa.selfcare.user_group.model.UserGroupStatus;
+import it.pagopa.selfcare.user_group.model.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -813,7 +810,6 @@ class UserGroupServiceImplTest {
         ResourceAlreadyExistsException exception = assertThrows(ResourceAlreadyExistsException.class, executable);
         assertEquals("A group with the same name already exists in ACTIVE or SUSPENDED state", exception.getMessage());
         verify(mongoTemplateMock).find(any(Query.class), eq(UserGroupEntity.class));
-        verify(mongoTemplateMock).count(any(Query.class), eq(UserGroupEntity.class));
     }
 
     @Test
@@ -850,7 +846,6 @@ class UserGroupServiceImplTest {
         ResourceAlreadyExistsException exception = assertThrows(ResourceAlreadyExistsException.class, executable);
         assertEquals("A group with the same institutionId-parentInstitutionId-productId already exists in ACTIVE or SUSPENDED state", exception.getMessage());
         verify(mongoTemplateMock).find(any(Query.class), eq(UserGroupEntity.class));
-        verify(mongoTemplateMock).count(any(Query.class), eq(UserGroupEntity.class));
     }
 
     @Test
@@ -883,7 +878,6 @@ class UserGroupServiceImplTest {
         assertEquals("A group with the same name already exists in ACTIVE or SUSPENDED state", exception.getMessage());
         verify(userGroupRepository).findById(groupId);
         verify(mongoTemplateMock).find(any(Query.class), eq(UserGroupEntity.class));
-        verify(mongoTemplateMock).count(any(Query.class), eq(UserGroupEntity.class));
         verify(group).getName();
     }
 
@@ -892,18 +886,28 @@ class UserGroupServiceImplTest {
         String institutionId = "inst1";
         String parentInstitutionId = "parent1";
         String productId = "prod1";
-        UUID member = UUID.randomUUID();
-        Set<UUID> members = Set.of(member);
+        String name = "groupName";
+        String description = "groupDescription";
+        String member = UUID.randomUUID().toString();
+        Set<String> members = Set.of(member);
+
+        GroupDto userGroup = new GroupDto();
+        userGroup.setInstitutionId(institutionId);
+        userGroup.setParentInstitutionId(parentInstitutionId);
+        userGroup.setMembers(members);
+        userGroup.setProductId(productId);
+        userGroup.setName(name);
+        userGroup.setDescription(description);
 
         UserGroupEntity entity = new UserGroupEntity();
         entity.setId("group123");
+        entity.setParentInstitutionId(parentInstitutionId);
 
-        when(mongoTemplateMock.count(any(Query.class), eq(UserGroupEntity.class))).thenReturn(1L);
         when(mongoTemplateMock.find(any(Query.class), eq(UserGroupEntity.class)))
                 .thenReturn(List.of(entity));
         when(auditorAware.getCurrentAuditor()).thenReturn(Optional.of("testUser"));
 
-        groupService.addMembers(institutionId, parentInstitutionId, productId, members);
+        groupService.createGroupOrAddMembers(userGroup);
 
         verify(mongoTemplateMock).updateFirst(
                 any(),
@@ -914,47 +918,116 @@ class UserGroupServiceImplTest {
 
     @Test
     void addMembers_nullInstitutionId_shouldThrow() {
-        Set<UUID> members = Set.of(UUID.randomUUID());
+        Set<String> members = Set.of(UUID.randomUUID().toString());
+        GroupDto userGroup = new GroupDto();
+        userGroup.setParentInstitutionId("parentInstitutionId");
+        userGroup.setMembers(members);
+        userGroup.setProductId("productId");
+        userGroup.setName("name");
+        userGroup.setDescription("description");
 
         assertThrows(IllegalArgumentException.class,
-                () -> groupService.addMembers(null, "parent", "prod", members));
+                () -> groupService.createGroupOrAddMembers(userGroup));
     }
 
     @Test
     void addMembers_nullParentInstitutionId_shouldThrow() {
-        Set<UUID> members = Set.of(UUID.randomUUID());
+        Set<String> members = Set.of(UUID.randomUUID().toString());
+        GroupDto userGroup = new GroupDto();
+        userGroup.setInstitutionId("institutionId");
+        userGroup.setMembers(members);
+        userGroup.setProductId("productId");
+        userGroup.setName("name");
+        userGroup.setDescription("description");
 
         assertThrows(IllegalArgumentException.class,
-                () -> groupService.addMembers("inst", null, "prod", members));
+                () -> groupService.createGroupOrAddMembers(userGroup));
     }
 
     @Test
-    void addMembers_noGroupFound_shouldThrowResourceNotFound() {
-        Set<UUID> members = Set.of(UUID.randomUUID());
+    void addMembers_noGroupFound_createNewGroup() {
+        String institutionId = "inst1";
+        String parentInstitutionId = "parent1";
+        String productId = "prod1";
+        String name = "groupName";
+        String description = "groupDescription";
+        String member = UUID.randomUUID().toString();
+        Set<String> members = Set.of(member);
 
-        when(mongoTemplateMock.count(any(Query.class), eq(UserGroupEntity.class))).thenReturn(0L);
+        GroupDto userGroup = new GroupDto();
+        userGroup.setInstitutionId(institutionId);
+        userGroup.setParentInstitutionId(parentInstitutionId);
+        userGroup.setMembers(members);
+        userGroup.setProductId(productId);
+        userGroup.setName(name);
+        userGroup.setDescription(description);
+
+        UserGroupEntity entity = new UserGroupEntity();
+        entity.setId("group123");
+
         when(mongoTemplateMock.find(any(Query.class), eq(UserGroupEntity.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
+        when(auditorAware.getCurrentAuditor()).thenReturn(Optional.of("testUser"));
+        when(userGroupRepository.insert(any(UserGroupEntity.class))).thenReturn(new UserGroupEntity());
 
-        assertThrows(ResourceNotFoundException.class,
-                () -> groupService.addMembers("inst", "parent", "prod", members));
+        groupService.createGroupOrAddMembers(userGroup);
+
+        verify(mongoTemplateMock).find(any(Query.class), eq(UserGroupEntity.class));
+        verify(userGroupRepository).insert(any(UserGroupEntity.class));
+    }
+
+    @Test
+    void addMembers_noGroupFound_tryToCreateNewGroup_NameUniqueness() {
+        String institutionId = "inst1";
+        String parentInstitutionId = "parent1";
+        String productId = "prod1";
+        String name = "groupName";
+        String description = "groupDescription";
+        String member = UUID.randomUUID().toString();
+        Set<String> members = Set.of(member);
+
+        GroupDto userGroup = new GroupDto();
+        userGroup.setInstitutionId(institutionId);
+        userGroup.setParentInstitutionId(parentInstitutionId);
+        userGroup.setMembers(members);
+        userGroup.setProductId(productId);
+        userGroup.setName(name);
+        userGroup.setDescription(description);
+
+        UserGroupEntity entity = new UserGroupEntity();
+        entity.setId("group123");
+        entity.setName("groupName");
+
+        when(mongoTemplateMock.find(any(Query.class), eq(UserGroupEntity.class)))
+                .thenReturn(List.of(entity));
+
+        assertThrows(ResourceAlreadyExistsException.class,
+                () -> groupService.createGroupOrAddMembers(userGroup));
     }
 
     @Test
     void addMembers_multipleGroupsFound_shouldThrowIllegalState() {
-        Set<UUID> members = Set.of(UUID.randomUUID());
+        Set<String> members = Set.of(UUID.randomUUID().toString());
+        GroupDto userGroup = new GroupDto();
+        userGroup.setInstitutionId("institutionId");
+        userGroup.setParentInstitutionId("parentInstitutionId");
+        userGroup.setMembers(members);
+        userGroup.setProductId("productId");
+        userGroup.setName("name");
+        userGroup.setDescription("description");
 
         UserGroupEntity e1 = new UserGroupEntity();
         e1.setId("id1");
+        e1.setParentInstitutionId("parentInstitutionId");
         UserGroupEntity e2 = new UserGroupEntity();
         e2.setId("id2");
+        e2.setParentInstitutionId("parentInstitutionId");
 
-        when(mongoTemplateMock.count(any(Query.class), eq(UserGroupEntity.class))).thenReturn(2L);
         when(mongoTemplateMock.find(any(Query.class), eq(UserGroupEntity.class)))
                 .thenReturn(List.of(e1, e2));
 
         assertThrows(IllegalStateException.class,
-                () -> groupService.addMembers("inst", "parent", "prod", members));
+                () -> groupService.createGroupOrAddMembers(userGroup));
     }
 
 }
